# pavise

./: README.md  pyproject.toml  tox.ini
src/patrol/: __init__.py  pandas.py  polars.py  validators.py
src/patrol/_core/: __init__.py  validation.py
src/patrol/_pandas/: validation.py  validator_impl.py
src/patrol/_polars/: validation.py  validator_impl.py
src/pavise/: pandas.py  polars.py
tests/: test_pandas.py  test_polars.py
tests/test_pandas/: test_dataframe.py  test_validators.py
tests/test_polars/: test_dataframe.py  test_validators.py
