[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patrol"
version = "0.2.0"
description = "DataFrame validation library using Python Protocol for structural subtyping"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "kitagry"},
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=1.3.0",
]
polars = [
    "polars>=0.15.0",
]
all = [
    "pandas>=1.3.0",
    "polars>=0.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyrefly>=0.1.0",
    "ruff>=0.1.0",
    "tox>=4.0.0",
    "pandas>=1.3.0",
    "polars>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/patrol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyrefly]
python_version = "3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
